--- a/index.html
+++ b/index.html
@@ -91,8 +91,8 @@
 
     <nav>
         <ul>
-            <li><a href="portafolio.html">Explora nuestro Portafolio</a></li>
-            <li><a href="contacto.html">Contáctanos</a></li>
+            <li><a href="index1.html">Explora nuestro Portafolio</a></li>
+            <li><a href="index2.html">Contáctanos</a></li>
         </ul>
     </nav>
 
